Fix viewport on mobile devices

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,8 +119,11 @@ nav {
     border: none;
     min-width: 512px; }
 
-  .page-footer {
-    font-size: 1.2em; } }
+  .page-footer h5 {
+    font-size: 1.5em; }
+
+  .page-footer a {
+    font-size: 1.3em; } }
 @media only screen and (max-width: 991px) and (min-width: 768px) {
   .nav-link {
     font-size: 1.5em; }
@@ -143,3 +146,5 @@ nav {
 .img_3-2 { background-image: url('https://farm7.staticflickr.com/6083/6055581292_d94c2d90e3.jpg'); }
 .img_3-3 { background-image: url('https://farm4.staticflickr.com/3771/13199704015_72aa535bd7.jpg'); }
 */
+.portfolio-type .selected {
+  color: #fff !important; }
